src/Editor/stylesheets/theme.css
.codex-editor {
	-webkit-font-smoothing: auto;
	-moz-osx-font-smoothing: auto;

	font: 1em/1.5 -apple-system, BlinkMacSystemFont, sans-serif;
	-moz-tab-size: 4;
	tab-size: 4;
}
.codex-editor code {
	font: 0.875em/1.3125 "iA Writer Mono var", monospace;
	-moz-tab-size: 2;
	tab-size: 2;
}
.codex-editor * {
	caret-color: #000;
}

.codex-editor *::-moz-selection {
	/* background-color: ... */
}
.codex-editor *::selection {
	/* background-color: ... */
}

.codex-editor .markdown {
	color: var(--md-blue-a400);
}

